--- a/Profiles/Dylane/index.html
+++ b/Profiles/Dylane/index.html
@@ -138,10 +138,10 @@
         </div>
         <aside class="hero-photo-card">
           <div class="profile-photo">
-            <img src="profile_pic.jpg" alt="Photo of Dylan Laconscience" />
+            <img src="profile.jpg" alt="Photo of Dylan Laconscience" />
           </div>
           <p class="photo-caption">Always learning and building.</p>
-          <p class="location">í³ Washington, D.C. Â· Available for cloud & dev roles</p>
+          <p class="location">ï¿½ï¿½ï¿½ Washington, D.C. Â· Available for cloud & dev roles</p>
         </aside>
       </div>
     </section>
