edited my static website script

--- a/Profiles/Nelson/index.html
+++ b/Profiles/Nelson/index.html
@@ -53,12 +53,11 @@
   <h3>Cloud Engineer – Teamfolio</h3>
   <p>Designed and implemented scalable AWS cloud environments, automated deployment pipelines, managed Kubernetes workloads, implemented Infrastructure as Code using Terraform, and optimized monitoring and security practices to ensure operational excellence.</p>
 </section>
-
 <section id="Contact">
   <h2>Contact Me</h2>
-  <p>Website: <a href="https://yourwebsite.com">yourwebsite.com</a></p>
-  <p>Phone: 123-456-7890</p>
-  <p>Email: nelsonijenwa@gmail.com</p>
+  <p>Website: <a href="https://nelsonproject2025.s3.ca-central-1.amazonaws.com/index.htmlm</a></p>
+  <p>Phone: 647-501-4918</p>
+  <p>Email: nelsondevops51@gmail.com</p>
   <p>LinkedIn: <a href="https://linkedin.com/in/nelsonijenwa">linkedin.com/in/nelsonijenwa</a></p>
 </section>
 
