--- a/app/public/index.html
+++ b/app/public/index.html
@@ -183,8 +183,9 @@
                         <a href="http://dylan-teamfolio-profile.s3-website-us-east-1.amazonaws.com" target="_blank" class="link-btn portfolio">
                             <i class="fa-solid fa-globe"></i> Portfolio <i class="fa-solid fa-arrow-up-right-from-square" style="font-size: 0.7em; margin-left: 5px;"></i>
                         </a>
-                        <a href="https://www.linkedin.com/in/emmanuel-ngufor" target="_blank" class="link-btn linkedin">
+                        <a href="https://www.linkedin.com" target="_blank" class="link-btn linkedin">
                             <i class="fa-brands fa-linkedin-in"></i> LinkedIn
+                        </a>
                     </div>
                 </div>
 
@@ -206,6 +207,7 @@
                         </a>
                         <a href="https://www.linkedin.com" target="_blank" class="link-btn linkedin">
                             <i class="fa-brands fa-linkedin-in"></i> LinkedIn
+                        </a>
                     </div>
                 </div>
 
@@ -227,6 +229,7 @@
                         </a>
                         <a href="https://www.linkedin.com" target="_blank" class="link-btn linkedin">
                             <i class="fa-brands fa-linkedin-in"></i> LinkedIn
+                        </a>
                     </div>
                 </div>
 
@@ -240,7 +243,7 @@
                         </div>
                     </div>
                     <div class="member-links">
-                        <<a href="https://github.com/" target="_blank" class="link-btn github">
+                        <a href="https://github.com/" target="_blank" class="link-btn github">
                             <i class="fa-brands fa-github"></i> GitHub
                         </a>
                         <a href="http://bildad-teamfolio-profile.s3-website.ca-central-1.amazonaws.com" target="_blank" class="link-btn portfolio">
@@ -248,6 +251,7 @@
                         </a>
                         <a href="https://www.linkedin.com" target="_blank" class="link-btn linkedin">
                             <i class="fa-brands fa-linkedin-in"></i> LinkedIn
+                        </a>
                     </div>
                 </div>
 
