--- a/Profiles/Brandon/index.html
+++ b/Profiles/Brandon/index.html
@@ -6,6 +6,7 @@
     <title>Brandon Randell | Cloud Architect</title>
     
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
