--- a/app/index.html
+++ b/app/index.html
@@ -134,7 +134,7 @@
                     </div>
                     <div class="member-links">
                         <a href="#" class="link-btn github"><i class="fa-brands fa-github"></i> GitHub</a>
-                        <a href="http://emmanuel-teamfolio-profile.s3-website.ca-central-1.amazonaws.com" target="_blank" class="link-btn portfolio">
+                        <a href="https://emmanuel.teamfoliosolutions.com/" target="_blank" class="link-btn portfolio">
                             <i class="fa-solid fa-globe"></i> Portfolio <i class="fa-solid fa-arrow-up-right-from-square" style="font-size: 0.7em; margin-left: 5px;"></i>
                         </a>
                         <a href="#" class="link-btn linkedin"><i class="fa-brands fa-linkedin-in"></i> LinkedIn</a>
