intergrated yannick and noel's files and links

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -219,20 +219,20 @@
                 <!-- Member 6: Noel (Placeholder) -->
                 <div class="member-card reveal">
                     <div class="member-header">
-                        <img src="https://images.unsplash.com/photo-1580489944761-15a19d654956?q=80&w=400&auto=format&fit=crop" alt="Noel" class="pfp">
+                        <img src="images/noel.jpg" alt="Noel" class="pfp">
                         <div class="member-info">
                             <h3>Noel</h3>
                             <span class="role">Frontend Dev</span>
                         </div>
                     </div>
                     <div class="member-links">
-                        <a href="https://github.com/" target="_blank" class="link-btn github">
+                        <a href="https://github.com/class9b2025" target="_blank" class="link-btn github">
                             <i class="fa-brands fa-github"></i> GitHub
                         </a>
-                        <a href="Website" target="_blank" class="link-btn portfolio">
+                        <a href="https://noelselva.torontotrade.ca" target="_blank" class="link-btn portfolio">
                             <i class="fa-solid fa-globe"></i> Portfolio <i class="fa-solid fa-arrow-up-right-from-square" style="font-size: 0.7em; margin-left: 5px;"></i>
                         </a>
-                        <a href="https://www.linkedin.com" target="_blank" class="link-btn linkedin">
+                        <a href="https://www.linkedin.com/noel" target="_blank" class="link-btn linkedin">
                             <i class="fa-brands fa-linkedin-in"></i> LinkedIn
                         </a>
                     </div>
@@ -263,15 +263,15 @@
                 <!-- Member 8: Yannick (Placeholder) -->
                 <div class="member-card reveal">
                     <div class="member-header">
-                        <img src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?q=80&w=400&auto=format&fit=crop" alt="Yannick" class="pfp">
+                        <img src="images/yannick.jpg" alt="Yannick" class="pfp">
                         <div class="member-info">
                             <h3>Yannick</h3>
                             <span class="role">Data Scientist</span>
                         </div>
                     </div>
                     <div class="member-links">
-                        <a href="#" class="link-btn github"><i class="fa-brands fa-github"></i> GitHub</a>
-                        <a href="#" class="link-btn portfolio"><i class="fa-solid fa-globe"></i> Portfolio</a>
+                        <a href="https://github.com/keoukameniy-blip" class="link-btn github"><i class="fa-brands fa-github"></i> GitHub</a>
+                        <a href="http://yann-teamfolio-profile.s3-website.ca-central-1.amazonaws.com" class="link-btn portfolio"><i class="fa-solid fa-globe"></i> Portfolio</a>
                         <a href="#" class="link-btn linkedin"><i class="fa-brands fa-linkedin-in"></i> LinkedIn</a>
                     </div>
                 </div>
