--- a/Profiles/yannick/index.html
+++ b/Profiles/yannick/index.html
@@ -19,7 +19,7 @@
     <div style="display:flex; align-items:center; justify-content:center; gap:1.5rem;">
       <div style="width:130px; height:130px; border-radius:50%; background:#ddd; overflow:hidden; border:4px solid white;">
         <!-- Insert passport image here -->
-        <img src="" alt="Profile Picture" style="width:100%; height:100%; object-fit:cover;" />
+        <img src="yannick.jpg" alt="Profile Picture" style="width:100%; height:100%; object-fit:cover;" />
       </div>
       <div>
         <h1>Yannick</h1>
