fixed missing profile details for noel, nelson and bildad

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -139,8 +139,6 @@
                         <a href="https://github.com/emmanuel-ngufor" target="_blank" class="link-btn github">
                             <i class="fa-brands fa-github"></i> GitHub
                         </a>
-                        <a href="http://emmanuel-teamfolio-profile.s3-website.ca-central-1.amazonaws.com" target="_blank" class="link-btn portfolio">
-                        <a href="#" class="link-btn github"><i class="fa-brands fa-github"></i> GitHub</a>
                         <a href="https://emmanuel.teamfoliosolutions.com/" target="_blank" class="link-btn portfolio">
                             <i class="fa-solid fa-globe"></i> Portfolio <i class="fa-solid fa-arrow-up-right-from-square" style="font-size: 0.7em; margin-left: 5px;"></i>
                         </a>
@@ -204,7 +202,7 @@
                         </div>
                     </div>
                     <div class="member-links">
-                        <a href="https://github.com/" target="_blank" class="link-btn github">
+                        <a href="https://github.com/Nelsondevops51" target="_blank" class="link-btn github">
                             <i class="fa-brands fa-github"></i> GitHub
                         </a>
                         <a href="https://nelsonproject2025.s3.ca-central-1.amazonaws.com/index.html" target="_blank" class="link-btn portfolio">
@@ -219,7 +217,7 @@
                 <!-- Member 6: Noel (Placeholder) -->
                 <div class="member-card reveal">
                     <div class="member-header">
-                        <img src="images/noel.jpg" alt="Noel" class="pfp">
+                        <img src="images/noel.webp" alt="Noel" class="pfp">
                         <div class="member-info">
                             <h3>Noel</h3>
                             <span class="role">Frontend Dev</span>
@@ -232,7 +230,7 @@
                         <a href="https://noelselva.torontotrade.ca" target="_blank" class="link-btn portfolio">
                             <i class="fa-solid fa-globe"></i> Portfolio <i class="fa-solid fa-arrow-up-right-from-square" style="font-size: 0.7em; margin-left: 5px;"></i>
                         </a>
-                        <a href="https://www.linkedin.com/noel" target="_blank" class="link-btn linkedin">
+                        <a href="https://noelselva.torontotrade.ca/" target="_blank" class="link-btn linkedin">
                             <i class="fa-brands fa-linkedin-in"></i> LinkedIn
                         </a>
                     </div>
@@ -248,7 +246,7 @@
                         </div>
                     </div>
                     <div class="member-links">
-                        <a href="https://github.com/" target="_blank" class="link-btn github">
+                        <a href="https://github.com/mrpeace313" target="_blank" class="link-btn github">
                             <i class="fa-brands fa-github"></i> GitHub
                         </a>
                         <a href="http://bildad-teamfolio-profile.s3-website.ca-central-1.amazonaws.com" target="_blank" class="link-btn portfolio">
