Updated Divina portfolio link

--- a/Profiles/Divina/index.html
+++ b/Profiles/Divina/index.html
@@ -13,7 +13,7 @@
   <header class="hero">
     <img src="photo.jpg" alt="Divina David Photo" class="profile-photo" />
     <h1 class="name">Divina David</h1>
-    <h3 class="tagline">Cloud & DevOps Enthusiast | AWS Practitioner</h3>
+    <h3 class="tagline">Cloud & DevOps Engineer</h3>
   </header>
 
   <main class="content">
@@ -22,7 +22,7 @@
     <section class="about">
       <h2>About Me</h2>
       <p>
-        I’m <strong>Divina David</strong>, a passionate Cloud & DevOps learner focused on building
+        I’m <strong>Divina David</strong>, a passionate Cloud & DevOps Engineer focused on building
         scalable, automated, and production-ready solutions on AWS.
         Currently contributing to the <em>Teamfolio AWS Cloud Deployment Platform</em> where I work with
         EC2, ALB, S3, Auto Scaling, and monitoring workflows.
