--- a/app/public/index.html
+++ b/app/public/index.html
@@ -161,7 +161,7 @@
                         <a href="https://github.com/DivinaDavid" target="_blank" class="link-btn github">
                             <i class="fa-brands fa-github"></i> GitHub
                         </a>
-                        <a href="http://divina-teamfolio-profile.s3-website.ca-central-1.amazonaws.com" target="_blank" class="link-btn portfolio">
+                        <a href="https://divina.teamfoliosolutions.com/" target="_blank" class="link-btn portfolio">
                             <i class="fa-solid fa-globe"></i> Portfolio <i class="fa-solid fa-arrow-up-right-from-square" style="font-size: 0.7em; margin-left: 5px;"></i>
                         </a>
                         <a href="https://www.linkedin.com/in/divina-keerthi-anisha-david-2ab36598" target="_blank" class="link-btn linkedin">
