Update Brandon profile links and project details
Updated the live demo URL and contact email in the README and index.html. Refined project links, experience duration, and project images in index.html. Moved 'graph LR.mmd' from Profiles/Brandon to docs/ for better organization.

--- a/Profiles/Brandon/index.html
+++ b/Profiles/Brandon/index.html
@@ -84,7 +84,7 @@
                     </div>
                     <div class="meta-item">
                         <span>Experience</span>
-                        <p>1+ Years</p>
+                        <p>6+ Months</p>
                     </div>
                 </div>
                 <a href="#" class="btn btn-secondary">Download Resume</a>
@@ -157,7 +157,7 @@
             <!-- Project 1 -->
             <div class="card reveal">
                 <div class="card-image-wrapper">
-                    <img src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?q=80&w=1738&auto=format&fit=crop" alt="Coding">
+                    <img src="https://images.unsplash.com/photo-1669023414162-5bb06bbff0ec?q=80&w=2064&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Coding">
                 </div>
                 <!-- Added inline padding just to be safe -->
                 <div class="card-info" style="padding: 40px;">
@@ -172,11 +172,11 @@
                     <!-- BUTTONS -->
                     <div class="project-links">
                         <!-- Update with your Team Repo URL -->
-                        <a href="https://github.com/BrandoMan1" target="_blank" class="prj-btn">
+                        <a href="https://github.com/Class9-GroupB/teamfolio" target="_blank" class="prj-btn">
                             <i class="fa-brands fa-github"></i> Source Code
                         </a>
                         <!-- Update with your ALB URL if available -->
-                        <a href="#" target="_blank" class="prj-btn">
+                        <a href="https://teamfoliosolutions.com" target="_blank" class="prj-btn">
                             <i class="fa-solid fa-arrow-up-right-from-square"></i> Live Demo
                         </a>
                     </div>
@@ -197,7 +197,7 @@
 
                     <!-- BUTTONS -->
                     <div class="project-links">
-                        <a href="https://github.com/BrandoMan1" target="_blank" class="prj-btn">
+                        <a href="https://github.com/BrandoMan1/Environment-Security-Automator" target="_blank" class="prj-btn">
                             <i class="fa-brands fa-github"></i> View Script
                         </a>
                     </div>
@@ -222,7 +222,7 @@
                         <a href="https://github.com/BrandoMan1" target="_blank" class="prj-btn">
                             <i class="fa-brands fa-github"></i> Source Code
                         </a>
-                        <a href="https://dup1yszepvzv3.cloudfront.net" target="_blank" class="prj-btn">
+                        <a href="https://brandon.teamfoliosolutions.com" target="_blank" class="prj-btn">
                             <i class="fa-solid fa-arrow-up-right-from-square"></i> Live Site
                         </a>
                     </div>
@@ -241,7 +241,7 @@
                 Open to cloud architecture opportunities and collaborations.
             </p>
 
-            <a href="mailto:brandon@example.com" class="email-link">brandon@example.com</a>
+            <a href="mailto:brandonrandell8@gmail.com" class="email-link">brandonrandell8@gmail.com</a>
 
             <div class="social-links">
                 <a href="https://github.com/BrandoMan1" target="_blank" class="social-btn">
